--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <title>炎黄统谱网</title>
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
